fix nowvideo partner :before position and overflowing skin text

--- a/html_blocchi/scss/wind_partials/assistenza/wind_skin.scss
+++ b/html_blocchi/scss/wind_partials/assistenza/wind_skin.scss
@@ -23,21 +23,21 @@ html[id^=skin] {
             font-family: $weight-light;
             color: $color-white;
             position: absolute;
-            width: calc( 1024px - 150px);
+            width: calc( 1024px - 160px);
             z-index: 200;
             left: calc(50% - 512px);
             margin-top: 30px;
-            margin-left: 150px;
+            margin-left: 160px;
             @include breakpoint(min-desktop) {
                 left: 0;
-                margin-left: 100px;
-                width: calc(100% - 100px);
+                margin-left: 80px;
+                width: calc(100% - 80px);
             }
             @include breakpoint(medium) {
                 font-size: 14px;
                 margin-top: 40px;
                 left: 0;
-                width: calc( 100% - 100px);
+                width: calc( 100% - 80px);
             }
             @include breakpoint(small) {
                 text-align: center;
