--- a/html_blocchi/scss/wind_partials/homepages/blocco_visore_campi.scss
+++ b/html_blocchi/scss/wind_partials/homepages/blocco_visore_campi.scss
@@ -238,6 +238,9 @@
             background-color: #ededed;
             bottom: 5px;
             position: relative;
+            @include breakpoint(small) {
+                bottom: 0;
+            }
         }
         &_logo {
             margin: 0 auto;
